Sat Sep  6 00:15:37 BST 2003  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (make_content): Cast cont.dsize to size_t when
	  comparing it with the return value of strlen(). Avoids warning
	  when building with gdbm.

Thu Sep  4 20:22:21 BST 2003  Christian Rose  <menthos@menthos.com>

	* po/sv.po: Update from Translation Project.

Fri Aug 29 17:46:40 BST 2003  Michael Piefel <piefel@informatik.hu-berlin.de>

	* po/de.po: Update from Translation Project.

Fri Aug 29 17:42:15 BST 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Updated after the revision in tp@linux.it.

Thu Aug 28 11:19:21 BST 2003  Christian Rose  <menthos@menthos.com>

	* po/sv.po: Update from Translation Project.

Thu Aug 28 00:45:50 BST 2003  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: Update from Translation Project.

Thu Aug 28 00:43:33 BST 2003  Christian Rose  <menthos@menthos.com>

	* po/sv.po: Update from Translation Project.

Thu Aug 28 00:40:09 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Change "couldn't exec %s" to
	  "can't execute %s" in line with src/man.c, to make translators'
	  lives easier.
	  (pipeline_wait): Separate "%s: %s%s" into two translatable
	  strings: the "(core dumped)" portion should definitely be
	  translated.
	* src/accessdb.c (usage): Clarify "man_database" to "(The) man
	  database".

Thu Aug 28 00:18:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (usage): Expand "sec" to "section".

Wed Aug 27 00:50:07 BST 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Remove all fuzzy translations and insert missed ones.
	  Now this translation will be reviewed by the Italian translation
	  project for proofreading.

Tue Aug 26 20:16:23 BST 2003  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.2-pre1 (for translators).
	* docs/NEWS: Mention pipeline library.

Sat Aug 16 14:07:46 BST 2003  Colin Watson  <cjwatson@debian.org>
